[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["multipart"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
serde_json = "1.0.108"
tower-http = { version = "0.5.0", features = ["trace", "normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4"] }
sha256 = "1.4.0"
tower = "0.4.13"
axum-extra = "0.9.1"
